tests/valid/functions/rename_function_param.rs
/*
return: 4
*/

foo(b: int): int;

main(): int{
    return foo(3);
}

foo(a: int): int{
    return a + 1;
}