tests/invalid/functions/declaration_mismatch_2.rs
/*
fail: 1
*/

foo(a: int, b: int): int;

main(): int {
    return 5;
}

foo(a: int): int {
    return 4;
}